# otus-ml-skel

./: pyproject.toml  requirements.txt
notebook/: 1_Manual_DataValidation_Titanic.ipynb  2_Streamlining_DataValidation_Pydantic.ipynb  3_Data_Integrigity_checks_w_Deepchecks.ipynb  Baseline.ipynb  EDA.ipynb  employees.json
src/titanic/features/: fill.py
tests/: test_fill_age.py
