[build-system]
requires = ["setuptools>=64.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "titanic"
version = "1.0.1"
authors = [
    {name = "Pavel Filonov", email = "filonovpv@gail.com"},
]
description = "OTUS ML repo skeleton"
readme = "README.md"
requires-python = "==3.11.13"
keywords = ["one", "two"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "black>=22.10.0",
    "boto3>=1.24.0",
    "deepchecks[nlp]>=0.19.1",
    "fastapi>=0.85.0",
    "joblib>=1.2.0",
    "jupyter>=1.0.0",
    "mlflow>=2.0.0",
    "mypy>=0.991",
    "pandas>=1.5.0",
    "pylint>=2.15.0",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "requests>=2.28.0",
    "scikit-learn>=1.1.0",
    "seaborn>=0.12.0",
    "starlette-exporter>=0.15.0",
    "uvicorn[standard]>=0.18.0",
]

[project.urls]
homepage = "https://github.com/sdukshis/otus-ml-skel"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

